--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,10 +1,22 @@
 body {
-  margin: 0;
+  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://fsb.zobj.net/crop.php?r=2IVlZ3rCHALdMrt09Y2WhONavzDLwRwrMXRbrKrr-PXfdTM-cHl8U3RR6WwOx01U64OcAqvq-pEd1TEs-bB4F-hU-O26OotLprBg8bHcccwmHCPk6Sys4Q5HZRZDnvZpGMZgJen-mn06P5vQ");
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position-x:center;
+  background-color: #ded4b1;
+  /* background-position-y: -40px; */
+  /* height: 100vh; */
+  /* height: 245px; */
+
+
+  /* grid-template-rows: 1fr 1fr 1fr; */
+  /* grid-template-rows: 15% 15% 15% 15% 40%; */
 }
 
 code {
