--- a/client/src/css/thisDog.css
+++ b/client/src/css/thisDog.css
@@ -45,8 +45,8 @@
     border-radius: 25px;
     border-color: #ec9c46;
     background-color: #df7000c5;
-    width: 150px;
-    height: 95px;
+    width: 200px;
+    height: 7rem;
     font-family: 'Baloo Tammudu 2', cursive;
     grid-row: 7;
     grid-column: 3;
