--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,8 +1,8 @@
 .Home{
     position: absolute;
     display: grid;
-    grid-template-columns: repeat(8, 176px);
-     /* grid-template-rows: ;  */
+    grid-template-columns: 400px,400px,400px;
+    column-gap: 45px;
     grid-template-rows: 70px repeat(13, 45px);
     grid-gap: 10px;
 }
@@ -18,8 +18,8 @@
     background-color: #626262c5;
     font-size: 28px;
     text-decoration: none;
-    grid-row: 1;
-    grid-column: 7 / 8;
+    position: absolute;
+    left: 100rem;
 }
 .name{
     font-family: 'Baloo Tammudu 2', cursive;
@@ -29,6 +29,7 @@
     background-color: #df7000c5;
     grid-row: 3;
     grid-column: 1;
+    font-size: 1rem;
 }
 .order{
     font-family: 'Baloo Tammudu 2', cursive;
@@ -39,6 +40,7 @@
     background-color: #df7000c5;
     grid-row: 4;
     grid-column: 1;
+    font-size: 1rem;
 }
 .filter{
     font-family: 'Baloo Tammudu 2', cursive;
@@ -49,6 +51,7 @@
     background-color: #df7000c5;
     grid-row: 5;
     grid-column: 1;
+    font-size: 1rem;
 }
 .page{
     font-family: 'Baloo Tammudu 2', cursive;
@@ -59,6 +62,7 @@
     background-color: #626262c5;
     grid-row: 8;
     grid-column: 1;
+    font-size: 1rem;
 }
 .param{
     font-family: 'Baloo Tammudu 2', cursive;
@@ -69,6 +73,7 @@
     background-color: #df7000c5;
     grid-row: 6;
     grid-column: 1;
+    font-size: 1rem;
 }
 .valuee{
     text-align: center;
@@ -82,6 +87,7 @@
     background-color: #df7000c5;
     grid-row: 7;
     grid-column: 1;
+    font-size: 1rem;
 }
 .apply{
     font-family: 'Baloo Tammudu 2', cursive;
@@ -92,25 +98,29 @@
     background-color: #626262c5;
     grid-row: 9;
     grid-column: 1;
+    font-size: 1rem;
 }
 .OneDog{
     /* grid-area: 3 / 2 / 13 / 6; */
     grid-row: 2 / 14;
-    grid-column: 2 / 9;
+    grid-column: 2;
+    /* height: 120rem; */
     display: grid;
     column-gap: 45px;
-    row-gap: 10px;
+    row-gap: 2rem;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, 160px);
 }
 .Dogo{
+    width: 45rem;
+    height: 9.4rem;
     text-decoration:none;
-    border: 5px solid;
+    border: 0.4rem solid;
     border-radius: 25px;
     border-color: #e9b984;
     background-color: #b18a6270;
     display: grid;
-    row-gap: 10px;
+    row-gap: 1rem;
     column-gap: 7px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 25px 1fr;
@@ -118,7 +128,7 @@
 .DogoImg{
     grid-column: 1;
     grid-row: 1 / 2;
-    border-radius: 21px;
+    border-radius: 20px;
 }
 .DogoTemp{
     color: rgb(0, 0, 0);
@@ -126,6 +136,7 @@
     text-align: center;
     grid-column: 2;
     grid-row: 2;
+    font-size: 1.2rem;
 }
 .DogoName{
     color: rgb(0, 0, 0);
@@ -133,6 +144,7 @@
     text-decoration:none;
     grid-column: 3;
     grid-row: 2;
+    font-size: 1.2rem;
 }
 .DogosSpan{
     color: rgb(0, 0, 0);
